# aeroftp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO-AEROCLOUD-2.0.md  TODO-AEROCLOUD.md  TODO-MEGA.md  TODO_SESSION.md  com.aeroftp.AeroFTP.metainfo.xml  com.aeroftp.AeroFTP.yml  com.aeroftp.app.metainfo.xml  com.aeroftp.app.yml  index.html  package-lock.json  package.json  plan-aeroFtp.prompt.md  run-clean.sh  tailwind.config.js  vite.config.ts
.craft/: packed-files
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: plan-aeroFtp.prompt.md  plan-implementPerProjectLocalFoldersAndNavigationSync.prompt.md
.github/scripts/: security-regression.cjs
.github/workflows/: build.yml
aur/: .SRCINFO  PKGBUILD  README.md  aeroftp.desktop  update-pkgbuild.sh
docs/: CHANGELOG-OPENCODE.md  COMPETITOR-ANALYSIS.md  FLATHUB_SUBMISSION.md  MACOS-COMPATIBILITY.md  MACOS_QUICKSTART.md  MACOS_RELEASE_PLAN.md  PROTOCOL-FEATURES.md  README.md  RELEASE.md  SECURITY-AUDIT-SUMMARY.md  TRANSLATIONS.md  UBUNTU-COMPATIBILITY.md  UNIVERSAL-VAULT.md  WINDOWS-COMPATIBILITY.md
docs/security-evidence/: README.md  SECURITY-EVIDENCE-TEMPLATE.md  SECURITY-EVIDENCE-v2.0.8.md  SECURITY-EVIDENCE-v2.2.3.md  SECURITY-EVIDENCE-v2.2.4.md  SECURITY-EVIDENCE-v2.3.0.md  SECURITY-EVIDENCE-v2.4.0.md  SECURITY-EVIDENCE-v2.6.4.md
public/: splash.html
scripts/: analyze-translations.cjs  apply-translations.cjs  force-apply-translations.cjs  i18n-stats.ts  i18n-sync.ts  i18n-validate.ts  security-regression.cjs
shell_integration/linux/: install.sh
shell_integration/linux/nautilus/: aerocloud_nautilus.py
shell_integration/linux/nemo/: aerocloud_nemo.py
snap/: snapcraft.yaml
snap/gui/: aeroftp.desktop
src/: App.tsx  App.tsx.backup-phase1  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: hooks.nsh
src-tauri/macos/: build-finder-extension.sh
src-tauri/macos/AeroFTPFinderSync/: AeroFTPFinderSync.entitlements  FinderSync.swift  Info.plist
src-tauri/resources/: aeroftp-update-helper  com.aeroftp.update.policy
src-tauri/src/: aerovault_v2.rs  ai.rs  ai_stream.rs  ai_tools.rs  archive_browse.rs  chat_history.rs  cloud_config.rs  cloud_filter_badge.rs  cloud_provider_factory.rs  cloud_service.rs  context_intelligence.rs  credential_store.rs  crypto.rs  cryptomator.rs  cyber_tools.rs  delta_sync.rs  file_tags.rs  file_watcher.rs  filesystem.rs  ftp.rs  host_key_check.rs  image_edit.rs  keystore_export.rs  lib.rs  master_password.rs  plugin_registry.rs  plugins.rs  provider_commands.rs  pty.rs  session_commands.rs  session_manager.rs  ssh_shell.rs  sync.rs  sync_badge.rs  sync_scheduler.rs  totp.rs  transfer_pool.rs  tray_badge.rs  vault_remote.rs  windows_acl.rs
src-tauri/src/providers/: azure.rs  box_provider.rs  drime_cloud.rs  dropbox.rs  filelu.rs  filen.rs  fourshared.rs  ftp.rs  google_drive.rs  http_retry.rs  internxt.rs  jottacloud.rs  kdrive.rs  mega.rs  mod.rs  oauth1.rs  oauth2.rs  onedrive.rs  pcloud.rs  s3.rs  sftp.rs  types.rs  webdav.rs  zoho_workdrive.rs
src/components/: AboutDialog.tsx  ActivityLogPanel.tsx  ArchiveBrowser.tsx  BatchRenameDialog.tsx  BreadcrumbBar.tsx  CloudPanel.css  CloudPanel.tsx  CommandPalette.tsx  CompressDialog.css  CompressDialog.tsx  ConnectionScreen.tsx  CryptomatorBrowser.tsx  CryptomatorCreateDialog.tsx  CustomTitlebar.tsx  CyberToolsModal.tsx  DebugPanel.tsx  DependenciesPanel.tsx  DiskUsageTreemap.tsx  DuplicateFinderDialog.tsx  ErrorBoundary.tsx  ExportImportDialog.tsx  FeatureBadge.tsx  FileLuTrashManager.tsx  FileTagBadge.tsx  FileVersionsDialog.tsx  FolderOverwriteDialog.tsx  FolderTree.tsx  GlobalTooltip.tsx  GoogleDriveTrashManager.tsx  HostKeyDialog.tsx  ImageThumbnail.tsx  JottacloudTrashManager.tsx  KeystoreMigrationWizard.tsx  LanguageSelector.tsx  LargeIconsGrid.tsx  LocalFilePanel.tsx  LocalPathTabs.tsx  LockScreen.tsx  Logo.tsx  MasterPasswordDialog.tsx  (+33 more)
src/components/AISettings/: AISettingsPanel.css  AISettingsPanel.tsx  PluginBrowser.tsx  ProviderMarketplace.tsx  providerMarketplaceData.ts
src/components/DevTools/: AIChat.tsx  AIChatHeader.tsx  AIIcons.tsx  BatchToolApproval.tsx  ChatHistoryManager.tsx  ChatSearchOverlay.tsx  CodeBlockActions.tsx  CodeEditor.tsx  DevToolsPanel.tsx  DevToolsV2.tsx  FilePreview.tsx  GeminiCodeBlock.tsx  MarkdownRenderer.tsx  SSHTerminal.tsx  ToolApproval.tsx  aiChatAppKnowledge.ts  aiChatSmartContext.ts  aiChatSystemPrompt.ts  aiChatToolLabels.ts  aiChatToolPipeline.ts  aiChatToolValidation.ts  aiChatTypes.ts  aiChatUtils.ts  aiProviderProfiles.ts  index.ts  types.ts  useAIChatConversations.ts  useAIChatImages.ts  useAgentMemory.ts
src/components/Dialogs/: index.tsx
src/components/Preview/: UniversalPreview.tsx  index.ts  types.ts
src/components/Sync/: CanaryResultDialog.tsx  MultiPathEditor.tsx  RollbackDialog.tsx  SyncAdvancedConfig.tsx  SyncOptimizationBadges.tsx  SyncQuickMode.tsx  SyncTemplateDialog.tsx  syncConstants.ts  (+2 more)
src/hooks/: index.ts  useActivityLog.ts  useAnalytics.ts  useAutoUpdate.ts  useCircuitBreaker.ts  useCloudSync.ts  useConnection.ts  useDragAndDrop.ts  useFaviconDetection.ts  useFileBrowser.ts  useFileOperations.ts  useFileTags.ts  useFileTransfer.ts  useFtpConnection.ts  useFtpOperations.ts  useHumanizedLog.ts  useIconTheme.tsx  useKeyboardShortcuts.ts  useOAuth2.ts  useOverwriteCheck.ts  usePreview.ts  useProvider.ts  useSession.ts  useSessionManager.ts  useSettings.ts  useTheme.tsx  useTransferEvents.ts  useTransferOperations.ts  useTraySync.ts
src/i18n/: I18nContext.tsx  types.ts
src/providers/: index.ts  registry.ts  types.ts
src/types/: aerofile.ts  ai.ts  aiModelRegistry.ts  contextIntelligence.ts  plugins.ts  tools.ts
src/utils/: appBackgroundPatterns.ts  chatHistory.ts  cspReporter.ts  fileIcons.tsx  formatters.ts  index.ts  logger.ts  openUrl.ts  secureStorage.ts  transferErrorClassifier.ts
(+71 files in other folders)
