[package]
name = "aeroftp"
version = "1.3.2"
description = "AeroFTP - Fast, Beautiful, Reliable FTP Client"
authors = ["axpdev"]
license = "MIT"
repository = "https://github.com/axpnet/aeroftp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ftp_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
suppaftp = { version = "7", features = ["tokio"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
notify = { version = "6", default-features = true }
notify-debouncer-mini = "0.4"
tauri-plugin-single-instance = "2.3.6"

# Multi-protocol providers (Sprint 1)
async-trait = "0.1"
regex = "1"
url = "2"
urlencoding = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
walkdir = "2"
quick-xml = "0.31"

# OAuth2 Cloud Providers (Sprint 2)
oauth2 = "4"
keyring = "3"
open = "5"
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-aptabase = "1.0"  # Privacy-first analytics (v1.3.0)
semver = "1.0.27"

# Secure Credential Storage (v1.3.2 hotfix)
argon2 = "0.5"
aes-gcm = "0.10"

# MEGA Integration (Quick Connect Beta v0.5.0)
secrecy = "0.8"
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
ring = "0.17.14"
zeroize = "1.8.2"

# SFTP Support (Sprint 3 - v1.3.0)
# SECURITY: CVE-2025-54804 (Medium) - fix requires russh 0.54.1+
# russh-keys is stuck at 0.50-beta, incompatible with 0.54+
# Risk: DoS only (malicious server can crash client) - acceptable for now
# TODO: Update when russh-keys releases 0.54+ compatible version
# Tracking: https://github.com/axpnet/aeroftp/security/dependabot/3
russh = "0.48"
russh-sftp = "2.0"
russh-keys = "0.48"

# Archive Support with Encryption (v1.3.0+)
sevenz-rust = { version = "0.6", features = ["aes256", "compress"] }  # 7z with AES-256
tar = "0.4"                                                           # TAR archives
flate2 = "1.0"                                                        # Gzip compression
xz2 = "0.1"                                                           # XZ/LZMA compression
bzip2 = "0.4"                                                         # Bzip2 compression

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
