[package]
name = "aeroftp"
version = "2.0.9"
description = "AeroFTP - Fast, Beautiful, Reliable FTP Client"
authors = ["axpdev"]
license = "GPL-3.0"
repository = "https://github.com/axpnet/aeroftp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ftp_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
futures-util = "0.3"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
suppaftp = { version = "8", features = ["tokio", "tokio-async-native-tls"] }
native-tls = "0.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
portable-pty = "0.8"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
notify = { version = "6", default-features = true }
notify-debouncer-mini = "0.4"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-localhost = "2"                                               # Serve frontend via real HTTP to fix WebKitGTK rendering
tauri-plugin-autostart = "2"                                               # Launch on system startup

# Multi-protocol providers (Sprint 1)
async-trait = "0.1"
regex = "1"
url = "2"
urlencoding = "2"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
zip = { version = "7.2", default-features = false, features = ["deflate", "aes-crypto"] }
walkdir = "2"
quick-xml = "0.39"

# OAuth2 Cloud Providers (Sprint 2)
oauth2 = { version = "5", default-features = false }
http = "1"
open = "5"
rand = "0.8"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.3.3"
semver = "1.0.27"

# Secure Credential Storage (v1.3.2 hotfix)
argon2 = "0.5"
aes-gcm = "0.10"

# MEGA Integration (Quick Connect Beta v0.5.0)
secrecy = "0.10"
ring = "0.17.14"

# Box, pCloud, Azure, Filen providers (v1.4.1)
pbkdf2 = "0.12"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"

# SFTP Support (Sprint 3 - v1.3.0)
# CVE-2025-54804 resolved by upgrading to russh 0.54+
russh = { version = "0.57", features = ["ring"] }
russh-sftp = "2.1"

# Archive Support with Encryption (v1.3.0+)
sevenz-rust = { version = "0.6", features = ["aes256", "compress"] }  # 7z with AES-256
unrar = "0.5"                                                          # RAR extraction
trash = "5"                                                            # Cross-platform trash/recycle bin
tar = "0.4"                                                           # TAR archives
flate2 = "1.0"                                                        # Gzip compression
xz2 = "0.1"                                                           # XZ/LZMA compression
bzip2 = "0.6"                                                         # Bzip2 compression
arboard = "3"                                                         # Native clipboard access
image = { version = "0.25", default-features = false, features = ["png"] }  # Tray icon badge generation
libc = "0.2"                                                              # Unix UID for badge socket path

# Cryptomator vault support (v1.6.0)
scrypt = "0.11"                                                        # Cryptomator KDF
aes-kw = "0.2"                                                         # AES Key Wrap (RFC 3394)
aes-siv = "0.7"                                                        # AES-SIV filename encryption
data-encoding = "2"                                                    # Base32/Base64 encoding
jsonwebtoken = "10.3"                                                   # JWT parsing for vault.cryptomator (CVE-2026-25537 fix)

# AeroVault v2 - Military-Grade Encryption (v1.8.0)
chacha20poly1305 = "0.10"                                              # ChaCha20-Poly1305 for cascade mode
aes-gcm-siv = "0.11"                                                   # AES-GCM-SIV nonce-misuse resistant (RFC 8452)
hkdf = "0.12"                                                          # HKDF key derivation (RFC 5869)

# Security Toolkit - Cyber Tools (v2.1.0)
blake3 = "1"                                                           # BLAKE3 hash (Hash Forge)

# Windows Explorer badge integration (v2.0.5)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_CloudFilters",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
